overflow fix

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+.mobile-header {
+  width: 100vw;
 }
 
 body {
